--- a/Hiraeth/Hiraeth.vcxproj
+++ b/Hiraeth/Hiraeth.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="src\game\character_stats.cpp" />
     <ClCompile Include="src\game\creature.cpp" />
     <ClCompile Include="src\game\monster.cpp" />
+    <ClCompile Include="src\game\monster_data_manager.cpp" />
     <ClCompile Include="src\game\monster_manager.cpp" />
     <ClCompile Include="src\game\monster_stats.cpp" />
     <ClCompile Include="src\graphics\renderer.cpp" />
@@ -161,6 +162,8 @@
     <ClCompile Include="src\graphics\texture.cpp" />
     <ClCompile Include="src\graphics\texture_manager.cpp" />
     <ClCompile Include="src\graphics\window.cpp" />
+    <ClCompile Include="src\item\item.cpp" />
+    <ClCompile Include="src\item\item_data_manager.cpp" />
     <ClCompile Include="src\item\item_manager.cpp" />
     <ClCompile Include="src\keyboard\key.cpp" />
     <ClCompile Include="src\keyboard\keyboard.cpp" />
@@ -232,6 +235,7 @@
     <ClInclude Include="src\graphics\texture_manager.h" />
     <ClInclude Include="src\graphics\window.h" />
     <ClInclude Include="src\item\item.h" />
+    <ClInclude Include="src\item\item_data_manager.h" />
     <ClInclude Include="src\item\item_manager.h" />
     <ClInclude Include="src\keyboard\key.h" />
     <ClInclude Include="src\keyboard\keyboard.h" />
