--- a/SerializeLib/SerializeLib.vcxproj
+++ b/SerializeLib/SerializeLib.vcxproj
@@ -128,7 +128,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="srl\deserial.h" />
     <ClInclude Include="srl\ImageLoad.h" />
+    <ClInclude Include="srl\item_data.h" />
     <ClInclude Include="srl\map_data.h" />
     <ClInclude Include="srl\monster_data.h" />
     <ClInclude Include="srl\texture_data.h" />
