--- a/SerializeLib/SerializeLib.vcxproj
+++ b/SerializeLib/SerializeLib.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="srl\item_data.h" />
     <ClInclude Include="srl\map_data.h" />
     <ClInclude Include="srl\monster_data.h" />
+    <ClInclude Include="srl\npc_data.h" />
     <ClInclude Include="srl\quest_data.h" />
     <ClInclude Include="srl\texture_data.h" />
     <ClInclude Include="srl\tile_texture_data.h" />
