--- a/SerializeLib/SerializeLib.vcxproj
+++ b/SerializeLib/SerializeLib.vcxproj
@@ -128,6 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="srl\animation_data.h" />
     <ClInclude Include="srl\deserial.h" />
     <ClInclude Include="srl\ImageLoad.h" />
     <ClInclude Include="srl\item_data.h" />
@@ -139,6 +140,7 @@
     <ClInclude Include="srl\sprite_data.h" />
     <ClInclude Include="srl\texture_data.h" />
     <ClInclude Include="srl\tile_texture_data.h" />
+    <ClInclude Include="srl\types.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MathLib\MathLib.vcxproj">
