--- a/Hiraeth/Hiraeth.vcxproj
+++ b/Hiraeth/Hiraeth.vcxproj
@@ -159,10 +159,10 @@
     <ClCompile Include="src\game\character.cpp" />
     <ClCompile Include="src\game\character_stats.cpp" />
     <ClCompile Include="src\game\creature.cpp" />
-    <ClCompile Include="src\game\monster.cpp" />
-    <ClCompile Include="src\game\monster_data_manager.cpp" />
-    <ClCompile Include="src\game\monster_manager.cpp" />
-    <ClCompile Include="src\game\monster_stats.cpp" />
+    <ClCompile Include="src\game\monsters\monster.cpp" />
+    <ClCompile Include="src\game\monsters\monster_data_manager.cpp" />
+    <ClCompile Include="src\game\monsters\monster_manager.cpp" />
+    <ClCompile Include="src\game\monsters\monster_stats.cpp" />
     <ClCompile Include="src\graphics\renderer.cpp" />
     <ClCompile Include="src\graphics\buffers\buffer.cpp" />
     <ClCompile Include="src\graphics\buffers\indexbuffer.cpp" />
@@ -237,13 +237,15 @@
     <ClInclude Include="src\game\character.h" />
     <ClInclude Include="src\game\character_stats.h" />
     <ClInclude Include="src\game\creature.h" />
-    <ClInclude Include="src\game\monster.h" />
-    <ClInclude Include="src\game\monster_data_manager.h" />
-    <ClInclude Include="src\game\monster_manager.h" />
-    <ClInclude Include="src\game\monster_stats.h" />
+    <ClInclude Include="src\game\monsters\monster.h" />
+    <ClInclude Include="src\game\monsters\monster_data_manager.h" />
+    <ClInclude Include="src\game\monsters\monster_manager.h" />
+    <ClInclude Include="src\game\monsters\monster_stats.h" />
+    <ClInclude Include="src\game\projectile.h" />
     <ClInclude Include="src\game\stats.h" />
     <ClInclude Include="src\game\stats\timed_stat.h" />
     <ClInclude Include="src\graphics\layers\t_group.h" />
+    <ClInclude Include="src\graphics\percented_sprite.h" />
     <ClInclude Include="src\graphics\renderer.h" />
     <ClInclude Include="src\graphics\buffers\buffer.h" />
     <ClInclude Include="src\graphics\buffers\indexbuffer.h" />
@@ -283,6 +285,7 @@
     <ClInclude Include="src\save\serializer.h" />
     <ClInclude Include="src\skills\skill_icon.h" />
     <ClInclude Include="src\skills\skill_manager.h" />
+    <ClInclude Include="src\skills\top_right_icon.h" />
     <ClInclude Include="src\UI\main_ui.h" />
     <ClInclude Include="src\UI\ui_basic\ui_button.h" />
     <ClInclude Include="src\UI\ui_basic\ui_button_flashing.h" />
