--- a/Serializer/Serializer.vcxproj
+++ b/Serializer/Serializer.vcxproj
@@ -137,6 +137,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="code_for_checks\equip_data_check.h" />
     <ClInclude Include="code_for_checks\item_data_check.h" />
     <ClInclude Include="code_for_checks\monster_data_check.h" />
     <ClInclude Include="code_for_checks\skill_data_check.h" />
