--- a/SerializeLib/SerializeLib.vcxproj.filters
+++ b/SerializeLib/SerializeLib.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClInclude Include="srl\animation_data.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="srl\equip_item_data.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
